--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -95,6 +95,7 @@
     <Compile Include="ResourceRelationshipOfT.cs" />
     <Compile Include="Serialization\CanonicalUrlPathBuilder.cs" />
     <Compile Include="Serialization\DefaultUrlPathBuilder.cs" />
+    <Compile Include="Serialization\IResourceDeserializationPropertyMap.cs" />
     <Compile Include="Serialization\IUrlPathBuilder.cs" />
     <Compile Include="Http\PaginatedAttribute.cs" />
     <Compile Include="Http\ReturnsResourceAttribute.cs" />
@@ -110,6 +111,7 @@
     <Compile Include="ResourceRelationship.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\ErrorSerializer.cs" />
+    <Compile Include="Serialization\DefaultPropertyMap.cs" />
     <Compile Include="Serialization\ResourceDeserializer.cs" />
     <Compile Include="JsonApiException.cs" />
     <Compile Include="Serialization\ResourceSerializer.cs" />
